# ad-server

./: Cargo.toml  README.md
.github/workflows/: backend.yml
backend/: Cargo.toml  Dockerfile
backend/src/: advertisement.rs  logger.rs  main.rs
backend/src/database/: advertisement.rs  mod.rs  read_write.rs
backend/src/routes/: ad.rs  admin.rs  health.rs  mod.rs
common/: Cargo.toml
common/src/: country.rs  gender.rs  lib.rs  platform.rs
k6/: gen_ad.js  get_ad.js
k8s/: backend.yaml  helm.sh  postgresql.yaml
migration/: create_index.sql  create_table.sql
